Fixed viewport width and height bugs, announcements table good but doesn't hide overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body, html {
 
 body {
     display: grid;
-    grid-template-columns: 20vw 80vw;
+    grid-template-columns: minmax(215px, 20vw) minmax(750px, 80vw);
 }
 
 a {
@@ -20,8 +20,6 @@ a {
     background-color: brown;
     color:white;
     display: grid;
-    max-width: 310px;
-    min-width: 210px;
     grid-template-rows: 15vh 50vh 15vh;
 }
 
@@ -48,6 +46,10 @@ a {
     display: inline-block;
 }
 
+.branding {
+    display: grid;
+
+}
 
 .material-symbols-outlined {
     margin-right: 30px;
@@ -56,6 +58,7 @@ a {
 .main-content {
     display:grid;
     grid-template: 20vh 80vh / 5fr 1fr;
+    /* width: 100%; */
 }
 
 .header {
@@ -172,15 +175,15 @@ button {
     display: grid;
     grid-column: 1 / 3;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1rem;
 }
 
 .posts-and-title {
     display:grid;
-    grid-template-rows: 30px 1fr;
+    grid-template-rows: 1em 1fr;
 }
 
 .container-title {
-    grid-row: 1;
     font-size: 32px;
     margin: 10px;
     font-weight: bold;
@@ -208,5 +211,40 @@ button {
 }
 
 .interesting-stuff {
+    display: grid;
     grid-column: 2;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.announcements {
+    display: grid;
+    grid-template-rows: 1fr 6fr;
+}
+
+.announcements-container {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    background-color: rgb(49, 43, 43);
+    color: white;
+    margin: 10px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.announce-post{
+    background-color: red;
+    margin: 2px;
+    padding: 15px;
+    height: 80px;
+    border-radius: 10px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+.announce-post .post-title {
+    font-size: 16px;
 }
